--- a/quotes/quotes-template.yaml
+++ b/quotes/quotes-template.yaml
@@ -132,6 +132,9 @@ items:
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          volumeMounts:
+          - mountPath: /var/lib/mysql/data
+            name: quotesdb-volume-1
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
